# Python_WEB_2.0

./: .gitignore
mod_02/assistants/: dockerfile  pyproject.toml  requirements.txt
mod_02/assistants/assistants/: clean.py  notes.py  notes.sav  phone_book.py  start_page.py
mod_03/: factorize_func.py  factorize_process.py  factorize_thread.py  sort.py
mod_04/: .dockerignore  Dockerfile  README.md  contact.html  index.html  main.py
mod_05/: currency_rate.py  index.html  webchat.py
mod_06/: create_db.py  fill_db.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  (+3 more)
mod_09/: pyproject.toml
mod_09/bs_parser/: main.py  pars.py
mod_09/bs_parser/mongo/: config.ini.example  seeds.py
mod_09/scrapy_parser/scrapy_parser/: authors.json  main.py  quotes.json  settings.py
mod_09/scrapy_parser/scrapy_parser/spiders/: authors.py  quotes.py
mod_10/: README.md  pyproject.toml
mod_10/books/books/: urls.py
mod_10/books/quotes/: models.py  urls.py  views.py
mod_10/books/quotes/static/quotes/: style.css
mod_10/books/quotes/templates/quotes/: add_quote.html  author.html  index.html  quotes.html  top_ten_tags.html
mod_10/books/users/: views.py
mod_10/books/users/templates/users/: login.html  signup.html
mod_11/: README.md  alembic.ini  pyproject.toml
mod_11/alembic/: env.py
mod_11/mod_11/: db.py  main.py  models.py  schemas.py  seeds.py
mod_13/: README.md  main.py  pyproject.toml
mod_13/django_proj/: README.md  pyproject.toml
mod_13/django_proj/books/: docker-compose.yml
mod_13/django_proj/books/books/: settings.py
mod_13/django_proj/books/quotes/: forms.py
mod_13/django_proj/books/quotes/migrations/: 0001_initial.py
mod_13/django_proj/books/quotes/templates/quotes/: add_author.html  base.html  quotes_by_tag.html  tag.html
mod_13/django_proj/books/users/: forms.py  urls.py  views.py
mod_13/django_proj/books/users/templates/users/: login.html  signup.html
mod_13/django_proj/books/utils/: connect.py  data_migration.py
mod_13/migrations/versions/: 9ec5f94ed3fb_user_avatar.py
mod_13/src/: schemas.py
mod_13/src/conf/: config.py
mod_13/src/database/: db.py  models.py
mod_13/src/repository/: users.py
mod_13/src/routes/: auth.py
mod_13/src/services/: auth.py  email.py
(+61 files in other folders)
