[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Ghendel <jian.bakhman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
