[tool.poetry]
name = "assistants"
version = "0.1.0"
description = ""
authors = ["J.B. <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "3.8.0"
termcolor = "2.3.0"
prompt-toolkit = "3.0.39"


[tool.poetry.group.dev.dependencies]
faker = "19.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
